src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>DC Lead Process</fullName>
        <description>Dementia Connect Lead Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Converted</fullName>
        </values>
        <values>
            <fullName>Cold Lead</fullName>
        </values>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Open - Not Contacted</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified %28Converted%29</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>E%26D Lead Process</fullName>
        <description>Alzheimer&apos;s Trading Ltd Lead Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Cold Lead</fullName>
        </values>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Open - Not Contacted</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified %28Converted%29</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Master</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Converted</fullName>
        </values>
        <values>
            <fullName>Open - Not Contacted</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Cold_Lead_Reason__c</fullName>
        <description>Alzheimer&apos;s Trading Ltd</description>
        <inlineHelpText>Please enter a reason this lead is &apos;Cold Lead&apos;</inlineHelpText>
        <label>Cold Lead - Reason</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Budget restrictions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not replied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organisational change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to contact</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Used other provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training for individuals</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DB_Created_Date_without_Time__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package.  If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Created Date without Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Lead_Age__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Detailed_Product_Interest__c</fullName>
        <description>Alzheimer&apos;s Trading Ltd</description>
        <inlineHelpText>Please use this area to give a little more information about your interest in products or general Alzheimer&apos;s training.</inlineHelpText>
        <label>Specific topics you are interested in</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Donation_Amount__c</fullName>
        <label>Donation Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Donation_Close_Date__c</fullName>
        <label>Donation Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_us__c</fullName>
        <description>Alzheimer&apos;s Trading Ltd</description>
        <inlineHelpText>Please ask customer this question.  If coming from web to lead, customer will fill this out automatically.</inlineHelpText>
        <label>How did you hear about us?</label>
        <picklist>
            <picklistValues>
                <fullName>Alzheimer&apos;s Society Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exhibition / Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet Search Engine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Journal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word of mouth</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Lead Type</label>
        <picklist>
            <picklistValues>
                <fullName>Dementia Connect Web Application</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <inlineHelpText>Please fill out/edit this box and add Next Steps with a date as Lead progresses</inlineHelpText>
        <label>Next Steps</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <description>Alzheimer&apos;s Trading Ltd</description>
        <inlineHelpText>If &apos;Other&apos; is chosen for &apos;How did you hear about us?&apos; please fill out customers response here.</inlineHelpText>
        <label>If &apos;Other&apos;</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Alzheimer&apos;s Trading Ltd</description>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>North East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Care - East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Care - West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Care - South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DFC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <description>Alzheimer&apos;s Trading Ltd</description>
        <label>Sector</label>
        <picklist>
            <picklistValues>
                <fullName>Social Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DFC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Training_required_for__c</fullName>
        <description>Alzheimer&apos;s Trading Ltd</description>
        <inlineHelpText>Please choose the best applicable choice for the training level of dementia that customer needs assistance with.  This field will be on the web to lead form also.</inlineHelpText>
        <label>Training required for:</label>
        <picklist>
            <picklistValues>
                <fullName>All staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member of Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nursing staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Person with Dementia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior staff and managers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff responsible for the direct care of people with dementia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff who have occasional contact with people with dementia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff who work with people with dementia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rrpu__Alert_Message__c</fullName>
        <description>This field is installed by Riptide Pop-up Alerts and is used in conjunction with the Pop-up Alert S-Control.</description>
        <inlineHelpText>If you enter text into this field the text will be displayed in a pop-up message whenever someone views this record.</inlineHelpText>
        <label>Alert Message</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>All_Alzheimer_s_Trading_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Alzheimer_s_Trading_Lead_Record_Type</value>
        </filters>
        <label>All Alzheimer&apos;s Trading Leads</label>
        <sharedTo>
            <group>AlzheimersTradingLtdOfficeGroup185171</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Alzheimer_s_Trading_Ltd_Web</fullName>
        <filterScope>Queue</filterScope>
        <label>Alzheimer&apos;s Trading Ltd Web</label>
        <queue>AlzheimersTradingLtdWeb185171</queue>
        <sharedTo>
            <group>AlzheimersTradingLtdOfficeGroup185171</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <recordTypes>
        <fullName>Alzheimer_s_Trading_Lead_Record_Type</fullName>
        <active>true</active>
        <businessProcess>E%26D Lead Process</businessProcess>
        <description>E&amp;D Commercial Training Lead Record Type</description>
        <label>Alzheimer&apos;s Trading Lead Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>External_Organisation</fullName>
        <active>true</active>
        <businessProcess>DC Lead Process</businessProcess>
        <label>External Organisation</label>
    </recordTypes>
    <recordTypes>
        <fullName>OnlineDonation</fullName>
        <active>true</active>
        <businessProcess>Master</businessProcess>
        <label>Online Donation</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>